--- a/TODO_practical/todo_app/package.json
+++ b/TODO_practical/todo_app/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
     "bootstrap": "^5.2.3",
+    "file-loader": "^6.2.0",
     "js-cookie": "^3.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
