--- a/Practical_6_Deployment/Userlist/package.json
+++ b/Practical_6_Deployment/Userlist/package.json
@@ -22,10 +22,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build:staging": "env-cmd -f .env.staging react-scripts build",
+    "build:production": "env-cmd -f .env.production react-scripts build",
+    "build:development": "env-cmd -f .env.development react-scripts build"
   },
   "eslintConfig": {
     "extends": [
