--- a/Practical_6_Deployment/Userlist/package.json
+++ b/Practical_6_Deployment/Userlist/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.0.11",
     "axios": "^1.4.0",
     "babel-plugin-macros": "^3.1.0",
+    "env-cmd": "^10.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
